RESOLVED FIXED121253
DFG::GenerationInfo init/fill methods shouldn't duplicate a bunch of logic
https://bugs.webkit.org/show_bug.cgi?id=121253
Summary DFG::GenerationInfo init/fill methods shouldn't duplicate a bunch of logic
Filip Pizlo
Reported 2013-09-12 13:31:38 PDT
Add initGPR/fillGPR helpers.
Attachments
the patch (6.38 KB, patch)
2013-09-12 13:32 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2013-09-12 13:32:29 PDT
Created attachment 211466 [details] the patch
Filip Pizlo
Comment 2 2013-09-12 13:39:24 PDT
Note You need to log in before you can comment on or make changes to this bug.