DFG::GenerationInfo init/fill methods shouldn't duplicate a bunch of logic https://bugs.webkit.org/show_bug.cgi?id=121253

Reviewed by Oliver Hunt.

* dfg/DFGGenerationInfo.h:
(JSC::DFG::GenerationInfo::initGPR):
(JSC::DFG::GenerationInfo::initInt32):
(JSC::DFG::GenerationInfo::initJSValue):
(JSC::DFG::GenerationInfo::initCell):
(JSC::DFG::GenerationInfo::initBoolean):
(JSC::DFG::GenerationInfo::initStorage):
(JSC::DFG::GenerationInfo::fillGPR):
(JSC::DFG::GenerationInfo::fillJSValue):
(JSC::DFG::GenerationInfo::fillCell):
(JSC::DFG::GenerationInfo::fillInt32):
(JSC::DFG::GenerationInfo::fillBoolean):
(JSC::DFG::GenerationInfo::fillStorage):



Canonical link: https://commits.webkit.org/139202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155645 268f45cc-cd09-0410-ab3c-d52691b4dbfc